--- a/package.json
+++ b/package.json
@@ -24,7 +24,11 @@
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.7.1",
+    "cordova-plugin-datepicker": "^0.9.3",
     "core-js": "^2.5.4",
+    "ion2-calendar": "^3.0.0-rc.0",
+    "ionic4-date-picker": "^0.1.0",
+    "moment": "^2.24.0",
     "rxjs": "~6.5.1",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
@@ -55,5 +59,10 @@
     "tslint": "~5.15.0",
     "typescript": "~3.4.3"
   },
-  "description": "An Ionic project"
+  "description": "An Ionic project",
+  "cordova": {
+    "plugins": {
+      "cordova-plugin-datepicker": {}
+    }
+  }
 }
